--- a/web4test/src/main/webapp/firstpage/firstpage.html
+++ b/web4test/src/main/webapp/firstpage/firstpage.html
@@ -29,7 +29,6 @@
  <!--  최종 정리 css 파일-->
 <link rel="stylesheet" type="text/css" href="css/final.css" />
     
-    
 <style>
 body {
 	background: url(./images/login/background.jpg) no-repeat center center
@@ -74,7 +73,7 @@ body {
                         <li><a href="#" class="cbp-tm-icon-mobile">Sea lettuce</a></li> -->
                     </ul>
                 </li>
-                <li>
+                <li class="logoutList">
                 <ul class="ss-right loginBtn loginUserName">
                         <div class="naverBtn">
                              <a href="http://192.168.103.78:9999/web4test/naverLogin.do"
@@ -236,6 +235,7 @@ body {
         <script>
             var menu = new cbpTooltipMenu( document.getElementById( 'cbp-tm-menu' ) );
         </script> 
-
+<script type="text/javascript" src="js/jquery.cookie.js"></script>    
+<script type="text/javascript" src="js/jquery.session.js"></script> 
 </body>
 </html>
