--- a/web4test/src/main/webapp/mypage/mypage.html
+++ b/web4test/src/main/webapp/mypage/mypage.html
@@ -37,8 +37,7 @@
                 <li>
                     <a href="#"> Free-sentaiton</a>
                     <ul class="cbp-tm-submenu">
-                        <li><a href="#" class="cbp-tm-icon-users">Play Presentation</a></li>
-                        <li><a href="#" class="cbp-tm-icon-mobile">Connect Controller</a></li>
+                        <li><a href="http://localhost:9999/web4test/mypage/mypage.html" class="cbp-tm-icon-users">Canvas</a></li>
                     <!--     <li><a href="#" class="cbp-tm-icon-location">Plum salsify</a></li>
                         <li><a href="#" class="cbp-tm-icon-users">Bok choy celtuce</a></li>
                         <li><a href="#" class="cbp-tm-icon-earth">Onion endive</a></li>
@@ -50,7 +49,8 @@
                     <a href="#">About Us</a>
                     <ul class="cbp-tm-submenu">
 <!--                         <li><a href="#" class="cbp-tm-icon-archive">Tutorial</a></li>
- -->                        <li><a href="#" class="cbp-tm-icon-contract">F&Q</a></li>
+ -->                        
+                        <li><a href="http://localhost:9999/web4test/protoQna/qna.html" class="cbp-tm-icon-contract">F&Q</a></li>
                         <li><a href="#" class="cbp-tm-icon-earth">about freesentation</a></li>
                         <li><a href="#" class="cbp-tm-icon-users">about appleNet</a></li>
                         <!-- <li><a href="#" class="cbp-tm-icon-earth">Garlic mint</a></li>
