초기 로드 에디터 수정

--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -31,7 +31,7 @@
 
 <!-- 기능별코드 -->
 <script src="js/editLoad.js"></script><!-- load Deck -->
-<script src="js/Edit.js"></script><!-- 우인규 코드 html 기본 코드 -->
+<!-- <script src="js/Edit.js"></script>우인규 코드 html 기본 코드 getScript-->
 <script src="js/slide.js"></script><!-- 우인규 코드 slide 기본 코 -->
 <script src="js/text.js"></script><!--이혜인 text 코드  -->
 <!-- <script src="js/basic.js"></script> --><!-- 고유식 코드 shape, 기본 코드 -->
@@ -269,7 +269,7 @@
 					data-transition-speed="default" data-background-transition="slide">
 					<!-- 문제1 -->
 					<div class="slides" style="width: 960px; height: 700px;">
-						<section class="overflowing present has-light-background"
+						<section class="overflowing present has-light-background initial"
 							x="0"
 							y="0"
 							maxY="1"
