--- a/web4test/src/main/webapp/edit/hend.html
+++ b/web4test/src/main/webapp/edit/hend.html
@@ -8,14 +8,17 @@
 	href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/hend.css">
 
+<script src="js/jquery-1.11.2.js" type="text/javascript"></script>
+<script src="js/main-ui.js" type="text/javascript"></script>
+
 </head>
 
 <!-- 인증번호 -->
 <div class = 'id'>
 	<h1 class='h'> 인증번호 </h1> 
-	<div class = secondline>
-	<input class = text type = text>
-	<button class =' enter'> 인증 </button> 
+	<div class = 'secondline'>
+	<input class='authNo' type="number">
+	<button class='enter'> 인증 </button> 
 	</div>
 </div>
 <!-- 인증번호 -->
