--- a/web4test/src/main/webapp/reveal/preview.html
+++ b/web4test/src/main/webapp/reveal/preview.html
@@ -54,7 +54,7 @@
             </div>
 
         </div>
-    <script src="js/load.js"></script>
+    <script src="js/previewLoad.js"></script>
 <!-- 
         <script src="lib/js/head.min.js"></script>
         <script src="js/reveal.js"></script> 
