--- a/web4test/src/main/webapp/reveal/preview.html
+++ b/web4test/src/main/webapp/reveal/preview.html
@@ -18,15 +18,15 @@
     <link rel="stylesheet" href="css/contents.css">
     <script src = 'js/jquery-1.11.2.js'></script>
     <script src = 'js/preview.js'></script>
-    <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
-
+<!--     <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
+ -->
         <link rel="stylesheet" href="css/reveal.css">
         <link rel="stylesheet" href="css/theme/black.css" id="theme">
 
         <!-- Code syntax highlighting -->
         <link rel="stylesheet" href="lib/css/zenburn.css">
 
-        <!-- Printing and PDF exports -->
+   <!--      Printing and PDF exports
         <script>
             var link = document.createElement( 'link' );
             link.rel = 'stylesheet';
@@ -34,7 +34,7 @@
             link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
             document.getElementsByTagName( 'head' )[0].appendChild( link );
         </script>
-        
+         -->
         
 
         <!--[if lt IE 9]>
