--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -55,7 +55,15 @@
 
 </head>
 <body>
-
+  <div id="loadingLogo" 
+                      style="min-height:100%;
+				              background-color:white;
+				              min-width:1024px;
+				              width:100%; height:auto;
+				              position: fixed; top:0; left:0;
+				              z-index:999;">
+	  <img id="loadingLogo" src="../images/loading_icon2.gif" 
+	    style="position:absolute; left:40%; top:40%;"/></div>
 	<!-- 2번 추가 -->
 	<div class="pres">
 		<div class="pres-t">
