--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -1521,4 +1521,7 @@
 			<div class="toolbar-panel-arrow" style="top: 15px;"></div>
 		</div>
 	</div>
+	 <script type="text/javascript" src="js/jquery.cookie.js"></script>    
+  <script type="text/javascript" src="js/jquery.session.js"></script>
+	</body>
 </html>
